m3/aks/ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul-ui-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: consul-helm-ui
          servicePort: 8500
